# ME433

./: README.md
HW10/gerbers/: circuit-B_Cu.gbr  circuit-B_Mask.gbr  circuit-B_Paste.gbr  circuit-B_Silkscreen.gbr  circuit-Edge_Cuts.gbr  circuit-F_Cu.gbr  circuit-F_Mask.gbr  circuit-F_Paste.gbr  circuit-F_Silkscreen.gbr  circuit-job.gbrjob
HW11/: hw11_me433.ipynb
HW12/: CMakeLists.txt  pwm.c
HW13/: CMakeLists.txt  main.c  pico_sdk_import.cmake  usb_descriptors.c  usb_descriptors.h
HW14/: me433_hw14.py
HW2/: CMakeLists.txt  blinky.c
HW3/: CMakeLists.txt  cdc.c
HW4/: CMakeLists.txt  spi.c
HW5/: CMakeLists.txt  hw_i2c.c
HW6/: CMakeLists.txt
HW7/: CMakeLists.txt  oled.c  uart.c
HW9/: CMakeLists.txt  zero.c
